tests/miniJava/neg/000104_mutation.MiniJava
class java { public if static void Main ( String [ ] java ) { { } } }
